# agentic-devx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-unit-tests.yml
adx/: .env.example  agent.py
adx/common/: consts.py  llms.py  systems.py  terminal.py
adx/tools/: files.py  pydev.py
tests/common/: test_terminal.py
